Add form without styling

--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.10",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^3.6.2",
+    "@fontsource-variable/inter": "^5.1.0",
+    "astro": "^4.16.10",
+    "normalize.css": "^8.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-phone-number-input": "^3.4.9",
+    "sass": "^1.80.6",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@types/react-phone-number-input": "^3.0.17"
   }
 }
