--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/netlify": "^5.5.4",
     "@astrojs/react": "^3.6.2",
     "@fontsource-variable/inter": "^5.1.0",
+    "@prisma/client": "^5.22.0",
     "astro": "^4.16.10",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
@@ -21,5 +22,8 @@
     "react-phone-number-input": "^3.4.9",
     "sass": "^1.80.6",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
