--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prettier": "prettier . --write"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -24,6 +25,8 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
     "prisma": "^5.22.0"
   }
 }
