--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "prettier": "prettier . --write"
+    "prettier": "prettier . --write",
+    "postinstall": "prisma generate --no-engine"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
