--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "prettier": "prettier . --write",
-    "postinstall": "prisma generate"
+    "prettier": "prettier . --write"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/react": "^3.6.2",
-    "@astrojs/vercel": "^7.8.2",
     "@fontsource-variable/inter": "^5.1.0",
     "@prisma/client": "^5.22.0",
     "astro": "^4.16.10",
