--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource-variable/inter": "^5.1.0",
     "@prisma/client": "^5.22.0",
     "astro": "^4.16.10",
+    "libphonenumber-js": "^1.11.14",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
